--- a/tests/test-data/mock_genomics_server.yml
+++ b/tests/test-data/mock_genomics_server.yml
@@ -32,8 +32,10 @@ out_types:
         combined:
             file: &combined_metrics_file combined_metrics.csv
     qc:
-        - &fastqc_qc fastqc_qc.txt
-        - &combined_qc combined_qc.csv
+        &fastqc fastqc:
+            file: &fastqc_qc_file !ujoin [*fastqc, qc.txt]
+            raw_len: 6028
+        combined: &combined_qc_file combined_qc.csv
     counts:
         *htseq:
             file: &htseq_counts_file !ujoin [*htseq, counts.txt]
@@ -186,11 +188,22 @@ root:
                                 path: !ujoin [*P1, *R1, *batch_date, *combined_metrics_file]
                         qc:
                             path: QC
-                            files:
-                              - path: !ujoin [*P1_L1, *R1, *fastqc_qc]
-                              - path: !ujoin [*P1_L2, *R1, *fastqc_qc]
-                              - path: !ujoin [*P1_L3, *R1, *fastqc_qc]
-                            combined: !ujoin [*P1, *R1, *batch_date, *combined_qc]
+                            sources:
+                                *fastqc:
+                                    - sample: *P1_L1
+                                      path: !ujoin [*P1_L1, *R1, *fastqc_qc_file]
+                                      num_lines: 562
+                                      num_overrep_seqs: 0
+                                    - sample: *P1_L2
+                                      path: !ujoin [*P1_L2, *R1, *fastqc_qc_file]
+                                      num_lines: 578
+                                      num_overrep_seqs: 1
+                                    - sample: *P1_L3
+                                      path: !ujoin [*P1_L3, *R1, *fastqc_qc_file]
+                                      num_lines: 557
+                                      num_overrep_seqs: 0
+                            combined:
+                                path: !ujoin [*P1, *R1, *batch_date, *combined_qc_file]
                         counts:
                             path: counts
                             sources:
