--- a/tests/test-data/mock_genomics_server.yml
+++ b/tests/test-data/mock_genomics_server.yml
@@ -147,6 +147,8 @@ root:
                 processed:
                     projects:
                       - path: !join [Project_, *P1, Processed_globus_160929]
+                        combined_summary:
+                            path: !ujoin [*P1, *R1, *batch_date, combined_summary_data.csv]
                         metrics:
                             path: metrics
                             sources:
@@ -229,6 +231,8 @@ root:
                                 path: !ujoin [*P1, *R1, *batch_date, *combined_counts_file]
                                 len_table: 64253
                       - path: !join [Project_, *P2, Processed_globus_160929]
+                        combined_summary:
+                            path: !ujoin [*P2, *R1, *batch_date, combined_summary_data.csv]
                         metrics:
                             path: metrics
                             sources:
@@ -311,6 +315,8 @@ root:
                                 path: !ujoin [*P2, *R1, *batch_date, *combined_counts_file]
                                 len_table: 64253
                       - path: !join [Project_, *P3, Processed_globus_160929]
+                        combined_summary:
+                            path: !ujoin [*P3, *R1, *batch_date, combined_summary_data.csv]
                         metrics:
                             path: metrics
                             sources:
