update sex check routine to use more robust test, provide more details about values checked; also update sexcheck result field to be pass/warn/fail instead of True/False

--- a/tests/test-data/mock_genomics_server.yml
+++ b/tests/test-data/mock_genomics_server.yml
@@ -51,7 +51,7 @@ qc_types:
         &sexcheck sexcheck:
             file: &sexcheck_file !ujoin [*sexcheck, validation.csv]
             raw_len: 2
-            parse_len: 8
+            parse_len: 11
         combined:
             file: &combined_validation_file combined_validation.csv
 root:
@@ -250,9 +250,12 @@ root:
                                 *sexcheck:
                                     - sample: *P1_L1
                                       path: !ujoin [*P1_L1, *R1, *sexcheck_file]
+                                      reported_sex: female
                                     - sample: *P1_L2
                                       path: !ujoin [*P1_L2, *R1, *sexcheck_file]
+                                      reported_sex: female
                                     - sample: *P1_L3
+                                      reported_sex: female
                                       path: !ujoin [*P1_L3, *R1, *sexcheck_file]
                             combined:
                                 path: !ujoin [*P1, *R1, *batch_date, *combined_validation_file]
@@ -353,10 +356,13 @@ root:
                                 *sexcheck:
                                     - sample: *P2_L1
                                       path: !ujoin [*P2_L1, *R1, *sexcheck_file]
+                                      reported_sex: NA
                                     - sample: *P2_L2
                                       path: !ujoin [*P2_L2, *R1, *sexcheck_file]
+                                      reported_sex: NA
                                     - sample: *P2_L3
                                       path: !ujoin [*P2_L3, *R1, *sexcheck_file]
+                                      reported_sex: NA
                             combined:
                                 path: !ujoin [*P2, *R1, *batch_date, *combined_validation_file]
                                 len_table: 4
@@ -456,10 +462,13 @@ root:
                                 *sexcheck:
                                     - sample: *P3_L1
                                       path: !ujoin [*P3_L1, *R1, *sexcheck_file]
+                                      reported_sex: NA
                                     - sample: *P3_L2
                                       path: !ujoin [*P3_L2, *R1, *sexcheck_file]
+                                      reported_sex: NA
                                     - sample: *P3_L3
                                       path: !ujoin [*P3_L3, *R1, *sexcheck_file]
+                                      reported_sex: NA
                             combined:
                                 path: !ujoin [*P3, *R1, *batch_date, *combined_validation_file]
                                 len_table: 4
